--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -13,7 +13,7 @@
 
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
-        <h1>SIGN UP IN TICKETS NOW!</h1>
+        <h1>注册Tickets会员</h1>
     </div>
 </div>
 
