--- a/src/main/resources/templates/manager/statistics.html
+++ b/src/main/resources/templates/manager/statistics.html
@@ -38,7 +38,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Welcome, Smith <span class="caret"></span></a>
+                       aria-expanded="false">admin</a>
                     <ul class="dropdown-menu">
                         <li><a href="../manager/index.html" th:href="@{/manager/logout}">登出</a></li>
                     </ul>
