--- a/src/main/resources/templates/member/profile.html
+++ b/src/main/resources/templates/member/profile.html
@@ -38,10 +38,11 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Welcome, <span th:text="${userID}">Smith</span><span class="caret" ></span></a>
+                       aria-expanded="false">Welcome,<span th:text="${userName}">Smith</span><span class="caret" ></span></a>
                     <ul class="dropdown-menu">
+
                         <li><a href="../user/index.html" th:href="@{/user/logout}">登出</a></li>
-                        <li><a href="../user/register.html" th:href="@{/user/register}">注册</a></li>
+                        <!--<li><a href="../user/register.html" th:href="@{/user/goRegister}">注册</a></li>-->
                     </ul>
                 </li>
             </ul>
@@ -58,7 +59,7 @@
             </tr>
             <tr>
                 <td>用户ID</td>
-                <td th:text="${member.userID}">0000001</td>
+                <td th:text="${#numbers.formatInteger(member.userID,7)}">000001</td>
             </tr>
             <tr>
                 <td>邮箱</td>
@@ -349,9 +350,13 @@
     });
     $('.convert').on('click' , function () {
         var credit = $convert.find('input[name="credit"]').val();
-        inputs = {credit:credit};
-        url = '/member/convert';
-        callAjax(inputs,url, false);
+        if(credit>0) {
+            inputs = {credit: credit};
+            url = '/member/convert';
+            callAjax(inputs, url, false);
+        } else {
+            alert('积分不正常');
+        }
     });
     $('.delete').on('click' , function () {
         var password = $delete.find('input[name="password"]').val();
