--- a/src/main/resources/templates/site/buyOffline.html
+++ b/src/main/resources/templates/site/buyOffline.html
@@ -45,9 +45,9 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Welcome,<span class="caret" th:text="${siteID}"></span></a>
+                       aria-expanded="false">Welcome, <span th:text="${siteName}"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="../account/index.html" th:href="@{/site/logout}">Sign out</a></li>
+                        <li><a href="../site/login.html" th:href="@{/site/logout}">登出</a></li>
                     </ul>
                 </li>
             </ul>
@@ -67,7 +67,7 @@
             <table id="roomTable" class="table table-hover">
                 <tr>
                     <th>票据ID</th>
-                    <th>场馆ID</th>
+                    <!--<th>场馆ID</th>-->
                     <th>活动ID</th>
                     <th>是否会员</th>
 
@@ -82,7 +82,7 @@
 
                 <tr th:each="one : ${siteTR}">
                     <td th:text="${#numbers.formatInteger(one.recordID,7)}">000001</td>
-                    <td th:text="${#numbers.formatInteger(one.siteID,7)}">000001</td>
+                    <!--<td th:text="${#numbers.formatInteger(one.siteID,7)}">000001</td>-->
                     <td th:text="${#numbers.formatInteger(one.planID,7)}">000001</td>
                     <td th:if="${one.userID>0}" th:text ="${#numbers.formatInteger(one.userID,7)}">
                         000001
@@ -388,7 +388,11 @@
                if (data.result) {
                    location.reload();
                } else {
-                   var error_msg = '<p class="errtip">	<strong>Error</strong>：' + data.reason + '</p>'
+                   var error_msg ;
+                   if(data.reason==-1)
+                       error_msg = '<p class="errtip">	<strong>Error</strong>：选座超过20个啦 </p>';
+                   else
+                       error_msg = '<p class="errtip">	<strong>Error</strong>：' + data.reason + '</p>'
                    $(".err-msg").html(error_msg);
                }
            }
