--- a/src/main/resources/templates/site/index.html
+++ b/src/main/resources/templates/site/index.html
@@ -58,10 +58,10 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Welcome,  <span th:text="${userID}">Smith</span><span class="caret" ></span></a>
+                       aria-expanded="false">Welcome,<span th:text="${userName}">Smith</span><span class="caret" ></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="../user/index.html" th:href="@{/user/logout}">Sign out</a></li>
-                        <li><a href="../user/register.html" th:href="@{/user/register}">Register</a></li>
+                        <li><a href="../user/index.html" th:href="@{/user/logout}">登出</a></li>
+                        <!--<li><a href="../user/register.html" th:href="@{/user/goRegister}">注册</a></li>-->
                     </ul>
                 </li>
             </ul>
