--- a/src/main/resources/templates/site/info.html
+++ b/src/main/resources/templates/site/info.html
@@ -55,9 +55,9 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Welcome, <span th:text="${siteID}"></span></a>
+                       aria-expanded="false">Welcome, <span th:text="${siteName}"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="../site/login.html" th:href="@{/site/logout}">Sign out</a></li>
+                        <li><a href="../site/login.html" th:href="@{/site/logout}">登出</a></li>
                         <!--<li><a href="../account/register.html" th:href="@{../register}">Register</a></li>-->
                     </ul>
                 </li>
