--- a/src/main/resources/templates/site/plansShow.html
+++ b/src/main/resources/templates/site/plansShow.html
@@ -52,9 +52,9 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Welcome, <span class="caret" th:text="${siteID}"></span> </span></a>
+                       aria-expanded="false">Welcome, <span th:text="${siteName}"> </span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="../user/index.html" th:href="@{/site/logout}">Sign out</a></li>
+                        <li><a href="../site/login.html" th:href="@{/site/logout}">登出</a></li>
                         <!--<li><a href="../user/register.html" th:href="@{../register}">Register</a></li>-->
                     </ul>
                 </li>
@@ -84,20 +84,21 @@
                     <h3 th:text="${plan.description}"> PGL Major </h3>
                     <table class="table table-condensed">
                         <tr>
-                            <td>Plan ID</td>
-                            <td th:text="${plan.planID}">1</td>
+                            <td>活动ID</td>
+                            <!--<td th:text="${plan.planID}">1</td>-->
+                            <td th:text="${#numbers.formatInteger(plan.planID,7)}">000001</td>
                         </tr>
 
                         <tr>
-                            <td>Description</td>
+                            <td>类型</td>
                             <td th:text="${plan.planType}"> Dota 2</td>
                         </tr>
                         <tr>
-                            <td>Begin Time</td>
+                            <td>开始时间</td>
                             <td th:text="${plan.beginTime}">2018-01-08</td>
                         </tr>
                         <tr>
-                            <td>End Time</td>
+                            <td>结束时间</td>
                             <td th:text="${plan.endTime}">2018-02-03</td>
                         </tr>
                         <!--<tr>-->
@@ -125,32 +126,32 @@
     </div>
 
 
-    <nav aria-label="Page navigation" class="col-md-offset-4 col-md-4">
-        <ul class="pagination pagination-lg">
-            <li>
-                <!--disabled still not work-->
-                <a id="previous" href="#" th:disabled="${current == 0} ? 'disabled' : 'not'"
-                   th:href="@{/site/plans(siteID=${site.siteID},page=${current} - 1)}" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                </a>
-            </li>
-            <li><a href="#" th:href="@{/site/plans(siteID=${site.siteID},page=${current})}"
-                   th:text="${current} + 1">1</a></li>
-            <li><a href="#" th:href="@{/site/plans(siteID=${site.siteID},page=${current} + 1)}"
-                   th:text="${current} + 2">2</a></li>
-            <li><a href="#" th:href="@{/site/plans(siteID=${site.siteID},page=${current} + 2)}"
-                   th:text="${current} + 3">3</a></li>
-            <li><a href="#" th:href="@{/site/plans(siteID=${site.siteID},page=${current} + 3)}"
-                   th:text="${current} + 4">4</a></li>
-            <li><a href="#" th:href="@{/site/plans(siteID=${site.siteID},page=${current} + 4)}"
-                   th:text="${current} + 5">5</a></li>
-            <li>
-                <a href="#" th:href="@{/site/plans(siteID=${site.siteID},page=${current} + 1)}" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
+    <!--<nav aria-label="Page navigation" class="col-md-offset-4 col-md-4">-->
+        <!--<ul class="pagination pagination-lg">-->
+            <!--<li>-->
+                <!--&lt;!&ndash;disabled still not work&ndash;&gt;-->
+                <!--<a id="previous" href="#" th:disabled="${current == 0} ? 'disabled' : 'not'"-->
+                   <!--th:href="@{/site/plans(siteID=${site.siteID},page=${current} - 1)}" aria-label="Previous">-->
+                    <!--<span aria-hidden="true">&laquo;</span>-->
+                <!--</a>-->
+            <!--</li>-->
+            <!--<li><a href="#" th:href="@{/site/plans(siteID=${site.siteID},page=${current})}"-->
+                   <!--th:text="${current} + 1">1</a></li>-->
+            <!--<li><a href="#" th:href="@{/site/plans(siteID=${site.siteID},page=${current} + 1)}"-->
+                   <!--th:text="${current} + 2">2</a></li>-->
+            <!--<li><a href="#" th:href="@{/site/plans(siteID=${site.siteID},page=${current} + 2)}"-->
+                   <!--th:text="${current} + 3">3</a></li>-->
+            <!--<li><a href="#" th:href="@{/site/plans(siteID=${site.siteID},page=${current} + 3)}"-->
+                   <!--th:text="${current} + 4">4</a></li>-->
+            <!--<li><a href="#" th:href="@{/site/plans(siteID=${site.siteID},page=${current} + 4)}"-->
+                   <!--th:text="${current} + 5">5</a></li>-->
+            <!--<li>-->
+                <!--<a href="#" th:href="@{/site/plans(siteID=${site.siteID},page=${current} + 1)}" aria-label="Next">-->
+                    <!--<span aria-hidden="true">&raquo;</span>-->
+                <!--</a>-->
+            <!--</li>-->
+        <!--</ul>-->
+    <!--</nav>-->
 </div>
 
 
