--- a/src/main/resources/templates/manager/settlement.html
+++ b/src/main/resources/templates/manager/settlement.html
@@ -75,9 +75,9 @@
                         <a class="btn-primary operation" name="singleApprove"><span
                                 class="glyphicon glyphicon-ok"
                                 aria-hidden="true"></span></a>
-                        <a class="btn-danger operation" name="singleDeny"><span
-                                class="glyphicon glyphicon-remove"
-                                aria-hidden="true"></span></a>
+                        <!--<a class="btn-danger operation" name="singleDeny"><span-->
+                                <!--class="glyphicon glyphicon-remove"-->
+                                <!--aria-hidden="true"></span></a>-->
                     </td>
                 </tr>
             </table>
